--- a/1WelcomeApp/1WelcomeApp.csproj
+++ b/1WelcomeApp/1WelcomeApp.csproj
@@ -176,10 +176,24 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503090730246_initialModel.cs" />
+    <Compile Include="Migrations\202503090730246_initialModel.Designer.cs">
+      <DependentUpon>202503090730246_initialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503090803287_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\202503090803287_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>202503090803287_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503090815145_AddMembershipType.cs" />
+    <Compile Include="Migrations\202503090815145_AddMembershipType.Designer.cs">
+      <DependentUpon>202503090815145_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -294,6 +308,17 @@
     <Content Include="Scripts\bootstrap.bundle.js.map" />
     <Content Include="Scripts\jquery-3.7.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.7.0.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202503090730246_initialModel.resx">
+      <DependentUpon>202503090730246_initialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503090803287_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>202503090803287_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503090815145_AddMembershipType.resx">
+      <DependentUpon>202503090815145_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
