--- a/1WelcomeApp/1WelcomeApp.csproj
+++ b/1WelcomeApp/1WelcomeApp.csproj
@@ -188,6 +188,14 @@
     <Compile Include="Migrations\202503090815145_AddMembershipType.Designer.cs">
       <DependentUpon>202503090815145_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503102329155_PopulateMemberShipType.cs" />
+    <Compile Include="Migrations\202503102329155_PopulateMemberShipType.Designer.cs">
+      <DependentUpon>202503102329155_PopulateMemberShipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503110126022_ApplyAnnotationToCustomerName.cs" />
+    <Compile Include="Migrations\202503110126022_ApplyAnnotationToCustomerName.Designer.cs">
+      <DependentUpon>202503110126022_ApplyAnnotationToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -318,6 +326,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503090815145_AddMembershipType.resx">
       <DependentUpon>202503090815145_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503102329155_PopulateMemberShipType.resx">
+      <DependentUpon>202503102329155_PopulateMemberShipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503110126022_ApplyAnnotationToCustomerName.resx">
+      <DependentUpon>202503110126022_ApplyAnnotationToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
