--- a/1WelcomeApp/1WelcomeApp.csproj
+++ b/1WelcomeApp/1WelcomeApp.csproj
@@ -208,9 +208,26 @@
     <Compile Include="Migrations\202503110805197_AddBirthDateCustomer.Designer.cs">
       <DependentUpon>202503110805197_AddBirthDateCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503110914586_AddNewFieldsMovie.cs" />
+    <Compile Include="Migrations\202503110914586_AddNewFieldsMovie.Designer.cs">
+      <DependentUpon>202503110914586_AddNewFieldsMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503110920357_AddNewFieldsMovie1.cs" />
+    <Compile Include="Migrations\202503110920357_AddNewFieldsMovie1.Designer.cs">
+      <DependentUpon>202503110920357_AddNewFieldsMovie1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503110924262_PopulateDataGenre.cs" />
+    <Compile Include="Migrations\202503110924262_PopulateDataGenre.Designer.cs">
+      <DependentUpon>202503110924262_PopulateDataGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503110926448_PopulateDataMovie.cs" />
+    <Compile Include="Migrations\202503110926448_PopulateDataMovie.Designer.cs">
+      <DependentUpon>202503110926448_PopulateDataMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -353,6 +370,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503110805197_AddBirthDateCustomer.resx">
       <DependentUpon>202503110805197_AddBirthDateCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503110914586_AddNewFieldsMovie.resx">
+      <DependentUpon>202503110914586_AddNewFieldsMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503110920357_AddNewFieldsMovie1.resx">
+      <DependentUpon>202503110920357_AddNewFieldsMovie1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503110924262_PopulateDataGenre.resx">
+      <DependentUpon>202503110924262_PopulateDataGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503110926448_PopulateDataMovie.resx">
+      <DependentUpon>202503110926448_PopulateDataMovie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
