--- a/1WelcomeApp/1WelcomeApp.csproj
+++ b/1WelcomeApp/1WelcomeApp.csproj
@@ -232,7 +232,7 @@
     <Compile Include="Models\ViewModel\ManageViewModels.cs" />
     <Compile Include="Models\Entities\MembershipType.cs" />
     <Compile Include="Models\Entities\Movie.cs" />
-    <Compile Include="Models\ViewModel\NewCustomerViewModel.cs" />
+    <Compile Include="Models\ViewModel\CustomerFormViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerViewModel.cs" />
