Section 4: Exercise Build Forms: all movie function ( select , update, create)

--- a/1WelcomeApp/1WelcomeApp.csproj
+++ b/1WelcomeApp/1WelcomeApp.csproj
@@ -228,6 +228,10 @@
     <Compile Include="Migrations\202503130936343_AddGenreIdInMovie.Designer.cs">
       <DependentUpon>202503130936343_AddGenreIdInMovie.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503131009417_RemoveRequiredGenreInMovie.cs" />
+    <Compile Include="Migrations\202503131009417_RemoveRequiredGenreInMovie.Designer.cs">
+      <DependentUpon>202503131009417_RemoveRequiredGenreInMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ViewModel\AccountViewModels.cs" />
     <Compile Include="Models\Entities\Customer.cs" />
@@ -316,7 +320,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Movie\Random.cshtml" />
-    <Content Include="Views\Movie\Edit.cshtml" />
+    <Content Include="Views\Movie\UpdateForm.cshtml" />
     <Content Include="Views\Shared\_NavBarPartial.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Movie\Index.cshtml" />
@@ -391,6 +395,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503130936343_AddGenreIdInMovie.resx">
       <DependentUpon>202503130936343_AddGenreIdInMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503131009417_RemoveRequiredGenreInMovie.resx">
+      <DependentUpon>202503131009417_RemoveRequiredGenreInMovie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
