Section 5: validation: exercise applying validation for Movie. Note that : we use Model View instead View entity to fix issues of having default value of Number in stock ( =0) and Release Date = 01 Jan 0001) when create new Movie

--- a/1WelcomeApp/1WelcomeApp.csproj
+++ b/1WelcomeApp/1WelcomeApp.csproj
@@ -235,6 +235,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CustomValidationModel\Min18YearsIfAMember.cs" />
+    <Compile Include="Models\CustomValidationModel\ReleaseDateRule.cs" />
     <Compile Include="Models\ViewModel\AccountViewModels.cs" />
     <Compile Include="Models\Entities\Customer.cs" />
     <Compile Include="Models\Entities\Genre.cs" />
