section 8: authentication and authorization: Exercise Final: Extract view model classes you modify as part of this exercise, and put them in separate files in the ViewModels folder.

--- a/1WelcomeApp/1WelcomeApp.csproj
+++ b/1WelcomeApp/1WelcomeApp.csproj
@@ -291,15 +291,24 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CustomValidationModel\Min18YearsIfAMember.cs" />
     <Compile Include="Models\CustomValidationModel\ReleaseDateRule.cs" />
-    <Compile Include="Models\ViewModel\AccountViewModels.cs" />
+    <Compile Include="Models\Entities\ApplicationUser.cs" />
+    <Compile Include="Models\ViewModel\ForgotPasswordViewModel.cs" />
     <Compile Include="Models\Entities\Customer.cs" />
     <Compile Include="Models\Entities\Genre.cs" />
-    <Compile Include="Models\Entities\IdentityModels.cs" />
+    <Compile Include="Models\Entities\ApplicationDbContext.cs" />
+    <Compile Include="Models\ViewModel\ExternalLoginConfirmationViewModel.cs" />
+    <Compile Include="Models\ViewModel\ExternalLoginListViewModel.cs" />
+    <Compile Include="Models\ViewModel\ForgotViewModel.cs" />
+    <Compile Include="Models\ViewModel\LoginViewModel.cs" />
     <Compile Include="Models\ViewModel\ManageViewModels.cs" />
     <Compile Include="Models\Entities\MembershipType.cs" />
     <Compile Include="Models\Entities\Movie.cs" />
     <Compile Include="Models\ViewModel\CustomerFormViewModel.cs" />
     <Compile Include="Models\ViewModel\MovieFormViewModel.cs" />
+    <Compile Include="Models\ViewModel\RegisterViewModel.cs" />
+    <Compile Include="Models\ViewModel\ResetPasswordViewModel.cs" />
+    <Compile Include="Models\ViewModel\SendCodeViewModel.cs" />
+    <Compile Include="Models\ViewModel\VerifyCodeViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerViewModel.cs" />
