--- a/1WelcomeApp/Web.config
+++ b/1WelcomeApp/Web.config
@@ -20,7 +20,7 @@
   <system.web>
 	<sessionState mode="Off"></sessionState>
     <authentication mode="None" />
-    <compilation debug="false" targetFramework="4.8" />
+    <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
