Section 11: Deployment: custome application settings

--- a/1WelcomeApp/Web.Testing.config
+++ b/1WelcomeApp/Web.Testing.config
@@ -6,14 +6,19 @@
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an attribute "name" that has a value of "MyDB".
-    
+    finds an attribute "name" that has a value of "MyDB". -->
+
+	<appSettings>
+		<add key="MailServer" value="testing-smtp.hoang.com"
+			xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+	</appSettings>
+	
     <connectionStrings>
-      <add name="MyDB" 
+      <add name="DefaultConnection" 
         connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
-  -->
+ 
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
