--- a/1WelcomeApp/Web.config
+++ b/1WelcomeApp/Web.config
@@ -9,18 +9,8 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 		<section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
 	</configSections>
-	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-1WelcomeApp-20250305024942.mdf;Initial Catalog=aspnet-1WelcomeApp-20250305024942;Integrated Security=True" providerName="System.Data.SqlClient" />
-	</connectionStrings>
-	<appSettings>
-		<add key="MailServer" value="dev-smtp.hoang.com"/>
-		<add key="FacebookAppId" value="1224019819087400"/>
-		<add key="FacebookAppSecret" value="a1fa1b1586d53014f330c53b75208a60" />
-		<add key="webpages:Version" value="3.0.0.0" />
-		<add key="webpages:Enabled" value="false" />
-		<add key="ClientValidationEnabled" value="true" />
-		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	</appSettings>
+	<appSettings configSource="AppSettings.config" />
+	<connectionStrings configSource="ConnectionStrings.config" />
 	<system.web>
 		<sessionState mode="Off"></sessionState>
 		<authentication mode="None" />
