--- a/1WelcomeApp/Web.config
+++ b/1WelcomeApp/Web.config
@@ -12,6 +12,7 @@
 	<appSettings configSource="AppSettings.config" />
 	<connectionStrings configSource="ConnectionStrings.config" />
 	<system.web>
+      
 		<sessionState mode="Off"></sessionState>
 		<authentication mode="None" />
 		<compilation debug="true" targetFramework="4.8" />
@@ -26,6 +27,12 @@
 		</httpHandlers>
 	</system.web>
 	<system.webServer>
+		<httpErrors errorMode="Custom" existingResponse="Replace">
+			<remove statusCode="404"/>
+			<error statusCode="404" path="404.html" responseMode="File"/>
+			<remove statusCode="500"/>
+			<error statusCode="500" path="500.html" responseMode="File"/>
+		</httpErrors>
 		<modules>
 			<remove name="FormsAuthentication" />
 			<add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
